<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PlanBoard</string>
    <string name="title_activity_planboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="api_key">25d8037ccfd54f88a9304593d5235fb3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tortor dui, dapibus sit amet porta varius, tempor sit amet augue. Fusce nec lobortis sem. Etiam tristique augue elementum erat lacinia volutpat eget et nunc.</string>
    <string name="gaji_bulan_maret">Gaji bulan Maret</string>
    <string name="tgl_bln_thn" tools:ignore="Typos">tgl/bln/thn</string>
    <string name="_0">0</string>
    <string name="jumlah">Jumlah</string>
    <string name="keperluan_asal">Keperluan/Asal</string>
    <string name="tanggal">Tanggal</string>
    <string name="yuk_catat_keuanganmu">Yuk Catat Keuanganmu!</string>
    <string name="nominal">Nominal</string>
    <string name="tulis_tanpa_tanda_titik">Tulis tanpa tanda titik</string>
    <string name="pemasukan">Pemasukan</string>
    <string name="pengeluaran">Pengeluaran</string>
    <string name="rp">RP.</string>
    <string name="hari_ini">hari ini</string>
    <string name="menghapus_catatan_terakhir">Menghapus catatan terakhir</string>
    <string name="tulis_rencanamu_lalu_laksanakan">Tulis Rencanamu Lalu Laksanakan!</string>
    <string name="bintang">*</string>
    <string name="ubah">UBAH</string>
    <string name="hapus">HAPUS</string>
    <string name="judul">Judul</string>
    <string name="name">Name</string>
    <string name="beli_franchise_x">Beli franchise X</string>
    <string name="rencana">Rencana</string>
    <string name="target">Target:</string>
    <string name="tuliskan_strategi_dan_rencana_dalam_bentuk_list">Tuliskan strategi dan rencana dalam bentuk list</string>
    <string name="simpan">SIMPAN</string>
    <string name="gambar_berita">Gambar berita</string>
    <string name="_20_des_2020" tools:ignore="TypographyDashes">20-10-2020</string>
    <string name="np_target">Tidak ada</string>
    <string name="tingkat_urgensi">Tingkat Urgensi</string>
    <string name="sangat_penting">Sangat Penting</string>
    <string name="penting">Penting</string>
    <string name="biasa">Biasa</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="berita">Berita</string>
    <string name="keuangan">Keuangan</string>

    <string-array name="urgency">
        <item>@drawable/icon_normal</item>
        <item>@drawable/icon_urgent</item>
        <item>@drawable/icon_very</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="setelah_input_pertama_kali_mohon_ganti_tab_lalu_kembali">*Setelah input pertama kali, mohon ganti tab, lalu kembali</string>
</resources>