<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.plan.PlanNewFragment">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/bintang"
        android:textColor="#FF0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <EditText
        android:id="@+id/inputJudul"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_grid"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:hint="@string/beli_franchise_x"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bintang"
        android:textColor="#FF0000"
        app:layout_constraintStart_toStartOf="@+id/inputJudul"
        app:layout_constraintTop_toBottomOf="@+id/inputJudul" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rencana"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/target"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/inputRencana"
        app:layout_constraintTop_toBottomOf="@+id/inputRencana" />

    <EditText
        android:id="@+id/inputRencana"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/background_grid"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/tuliskan_strategi_dan_rencana_dalam_bentuk_list"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/inputJudul"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/inputTarget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/background_grid"
        android:ems="10"
        android:hint="@string/_20_des_2020"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/inputRencana"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_savePlan"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_main"
        android:enabled="true"
        android:text="@string/simpan"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/inputTarget"
        app:layout_constraintStart_toStartOf="@+id/inputTarget"
        app:layout_constraintTop_toBottomOf="@+id/inputTarget" />

</androidx.constraintlayout.widget.ConstraintLayout>