<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.plan.PlanEditFragment">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/bintang"
        android:textColor="#FF0000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <EditText
        android:id="@+id/inputEditJudul"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_grid"
        android:ems="10"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bintang"
        android:textColor="#FF0000"
        app:layout_constraintStart_toStartOf="@+id/inputEditJudul"
        app:layout_constraintTop_toBottomOf="@+id/inputEditJudul" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rencana"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12" />

    <EditText
        android:id="@+id/inputEditRencana"
        android:layout_width="0dp"
        android:layout_height="170dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/background_grid"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/inputEditJudul"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        android:importantForAutofill="no"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/target"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@+id/inputEditRencana"
        app:layout_constraintTop_toBottomOf="@+id/inputEditRencana" />

    <EditText
        android:id="@+id/inputEditTarget"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/background_grid"
        android:ems="10"
        android:hint="@string/_20_des_2020"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/inputEditRencana"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_updatePlan"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_main"
        android:enabled="true"
        android:text="@string/ubah"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/btn_deletePlan"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEditTarget" />

    <Button
        android:id="@+id/btn_deletePlan"
        android:layout_width="150dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button_2"
        android:enabled="true"
        android:text="@string/hapus"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_updatePlan"
        app:layout_constraintTop_toTopOf="@+id/btn_updatePlan" />

</androidx.constraintlayout.widget.ConstraintLayout>